--- a/notebooks/01_EDA.ipynb
+++ b/notebooks/01_EDA.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "56e6c135-1e1e-4311-b66e-5576227696d7",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "5e39a834-b14a-46db-b307-3d7f6933b3b4",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "f38e7609-7f64-4e7e-b2bb-664b254d201e",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "932cd130-9e20-41c7-a1d2-33611fac68a6",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "d5843d1f-8f41-4402-b216-4a28be46b17c",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "2      None      None      None      None      None  2015-06-18  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "cd5974cd-a26a-4b2b-bf6e-a7c1d0784fdf",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1469,7 @@
        "LastUpdate         NaN  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "id": "c6b42cff-4a9b-4a90-b4b8-d0d20913c0a2",
    "metadata": {},
    "outputs": [
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "97f7ec55-6738-4110-81c5-fae7c865a305",
    "metadata": {
     "scrolled": true
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "4cfe065c-a5d6-4265-9168-f37c202975e1",
    "metadata": {},
    "outputs": [],
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "22d924be-8647-42e5-9098-525957118f04",
    "metadata": {},
    "outputs": [],
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "ae241d94-8d16-4da3-9c65-b8ae27b96bdb",
    "metadata": {},
    "outputs": [
@@ -1979,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "a441d05c-cc4c-4dd4-877b-a3da6c083aeb",
    "metadata": {},
    "outputs": [
@@ -2194,7 +2194,7 @@
        "2                                          1.0  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "7e2a479c-8202-4501-b35a-323eb9245fc4",
    "metadata": {},
    "outputs": [
@@ -2792,7 +2792,7 @@
        "2013-14 CALPADS Fall 1 Certification Status       1.0       1.0        1.0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2803,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "b9302998-752a-43a7-8f28-1c59095b573a",
    "metadata": {},
    "outputs": [],
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "72c4ba60-9fa5-4835-bed0-d37e0e5fc75f",
    "metadata": {
     "scrolled": true
@@ -3046,7 +3046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "e49630b3-ff08-4a7b-9c30-9da84be3c7c4",
    "metadata": {},
    "outputs": [],
@@ -3062,7 +3062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "id": "a9cce3e4-3a3b-4b6b-83b3-ba60b2667037",
    "metadata": {},
    "outputs": [],
@@ -3072,7 +3072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "48119c91-73cb-4b23-aa3f-fa19449934a1",
    "metadata": {},
    "outputs": [
@@ -3108,7 +3108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "bc65181b-e2c3-4817-8f52-f0742adaa474",
    "metadata": {},
    "outputs": [
@@ -3250,7 +3250,7 @@
        "4       397.0       387.0        395.0        5.0       7.04  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3261,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "id": "859b6527-f0bb-4f8e-95cd-2fdad795c5ea",
    "metadata": {},
    "outputs": [
@@ -3403,7 +3403,7 @@
        "2330       475.0        463.0       21.0      38.89  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3414,7 +3414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "id": "ad137395-0292-49cf-b084-b7d6e3c2317e",
    "metadata": {},
    "outputs": [
@@ -3655,7 +3655,7 @@
        "PctGE1500       22.450097    0.0  22.22  39.29  57.14      98.2  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3666,7 +3666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "id": "66ec168c-1580-48a6-8167-82ba283c81bc",
    "metadata": {},
    "outputs": [
@@ -3683,6 +3683,7 @@
       "Saved: AvgScrMath.jpg\n",
       "Time elapsed: 0 minutes\n",
       "Saved: AvgScrWrite.jpg\n",
+      "Time elapsed: 0 minutes\n",
       "Saved: NumGE1500.jpg\n",
       "Saved: PctGE1500.jpg\n"
      ]
@@ -3694,7 +3695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "id": "c45a471c-27c5-4dfb-8956-070524e276dc",
    "metadata": {
     "scrolled": true
